# SFML-Platformer

./: .gitignore  CMakeLists.txt  a.out  brick.cpp  brick.hpp  coin.cpp  coin.hpp  constants.hpp  constants.hpp.gch  entity.cpp  entity.hpp  game.cpp  game.hpp  interactions.cpp  interactions.hpp  main  main.cpp  map.cpp  map.hpp  player.cpp  player.hpp  readme.md  sharedresources.cpp  sharedresources.hpp
main.dSYM/Contents/Resources/DWARF/: main
maps/: map01.json  map01.tmj  maps_project.tiled-session  tileset.tsx
